# aoc

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
2015/: README.md
2015/day01/: day01.py  test.txt
2015/day02/: day02.py
2015/day03/: day3.py
2015/day04/: day4.py
2015/day05/: day05.py
2015/day06/: day06.py
2015/day07/: day07.py
2015/day08/: day08.py
2015/day09/: day09.py
2015/day10/: day10.py
2015/day11/: day11.py
2015/day12/: day12.py
2015/day13/: day13.py
2015/day14/: day14.py
2015/day15/: day15.py
2015/day16/: day16.py
2015/day17/: day17.py
2015/day18/: day18.py
2015/day19/: day19.py
2015/day20/: day20.py
2016/: README.md
2016/day01/: day01.py
2016/day02/: day02.py
2016/day03/: day03.py
2017/: README.md
2017/day01/: day01.py
2017/day02/: day02.py
2017/day03/: day03.py
2018/: README.md
2018/day01/: day01.py
2018/day02/: day02.py
2019/: README.md
2019/day01/: day01.py
2019/day02/: day02.py
2020/: README.md
2020/day01/: day01.py
2020/day02/: day02.py
2021/: README.md
2021/day01/: day01.py
2021/day02/: day02.py
2021/day03/: day03.py
2021/day04/: day04.py
2021/day1/: day1_a.py
2022/: README.md
2022/day01/: day01.py
2022/day02/: day02.py
2022/day03/: day03.py
2022/day04/: day04.py
2022/day05/: day05.py
2022/day06/: day06.py  test.txt
2022/day07/: day07.py
2022/day08/: day08.py
2022/day09/: day09.py
2023/: README.md
aoc/: cli.py
template/: dayXX.jinja  dayXX.py
templates/: dayXX.jinja  dayXX.py
utils/: create_template_and_input_data.py
(+29 files in other folders)
