[tool.poetry]
name = "aoc"
version = "0.1.0"
description = "Advent of Code"
authors = ["Enric Ballo <enric.ballo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
numpy = "^2.1.3"
termcolor = "^2.5.0"
parse = "^1.20.2"
advent-of-code-data = "^2.0.4"
Jinja2 = "^3.1.4"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
